commit avant suppression image dans les  form designer